Fix: Prevent text flickering

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -89,6 +89,7 @@
     font-weight: 500;
     text-transform: uppercase;
     color: #fff;
+    line-height: 3rem;
   }
 
   h3 {
